kubectl/traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.7
          args:
            - --providers.kubernetesingress
            - --entrypoints.web.address=:80
            - --api.dashboard=true
            - --api.insecure=true
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
