kubectl/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app.kubernetes.io/name: db
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5432
