kubectl/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30021
    - name: dashboard
      port: 8080
      targetPort: 8080
      nodePort: 30042
  type: NodePort
